# CMakeGTestTemplate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
my_lib/: CMakeLists.txt  mylibfuncs.cpp  mylibfuncs.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  otherTestFile.cpp
